Fixing image alignment.

--- a/src/css/back-end-gutenberg.scss
+++ b/src/css/back-end-gutenberg.scss
@@ -142,7 +142,7 @@ $sizes: 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24;
 	}
 }
 
-/* For Sicla Media */
+/* For Social Media */
 .mpp-social {
 	margin-top: 15px;
 	svg {
@@ -221,6 +221,7 @@ $colors: twitter #00aced,
 		min-height: 150px;
 		max-width: 150px;
 		max-height: 150px;
+		margin-right: 15px;
 	}
 	.mpp-profile-meta {
 		clear: both;
@@ -290,10 +291,13 @@ $colors: twitter #00aced,
 		line-height: 1.0;
 		z-index: 1000;
 		margin-right: 30px;
-		min-width: 150px;
-		min-height: 150px;
-		max-width: 150px;
-		max-height: 150px;
+		img {
+			min-width: 150px;
+			min-height: 150px;
+			max-height: 150px;
+			max-width: 150px;
+		}
+
 	}
 	.mpp-profile-meta {
 		clear: both;
@@ -453,6 +457,7 @@ $colors: twitter #00aced,
 		min-height: 150px;
 		max-width: 150px;
 		max-height: 150px;
+		margin: 0 auto;
 	}
 	.mpp-profile-text {
 		line-height: 1.1;
